--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ python-dotenv
 openai
 aiohttp
 requests
+langchain
+langchain-openai
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+pytz
