reschedule and cancellation flows

--- a/example.env
+++ b/example.env
@@ -14,3 +14,6 @@ VERIFY_TOKEN=""
 
 OPENAI_API_KEY=""
 OPENAI_ASSISTANT_ID=""
+
+# Flask Configuration
+FLASK_DEBUG="True"  # Set to "False" for production
