--- a/example.env
+++ b/example.env
@@ -15,5 +15,8 @@ VERIFY_TOKEN=""
 OPENAI_API_KEY=""
 OPENAI_ASSISTANT_ID=""
 
+# Database Configuration
+DATABASE_URL=""  # PostgreSQL connection string from Supabase: postgresql://postgres:[password]@db.[project-ref].supabase.co:5432/postgres
+
 # Flask Configuration
 FLASK_DEBUG="True"  # Set to "False" for production
