Add webhook idempotency and agent tracing
- Implement message deduplication service with DB and in-memory fallback
  - Prevents processing duplicate WhatsApp messages
  - Uses PostgreSQL for persistent storage, LRU cache for local dev
  - Returns 200 OK immediately on duplicate detection

- Add lightweight tracing abstraction for agent runs
  - ConsoleTracer (default) with structured logging
  - LangfuseTracer skeleton (optional, env var enabled)
  - PII-safe: hashes phone numbers, redacts sensitive data
  - Tracks: run_id, user_id hash, message_id, tool_calls, errors, latency_ms

- Integrate tracing into LangChain service
  - Trace LLM calls, tool executions, and errors
  - Pass message_id through webhook flow for correlation

- Update documentation
  - README: idempotency details and tracing configuration
  - example.env: new tracing and deduplication env vars

--- a/example.env
+++ b/example.env
@@ -20,3 +20,12 @@ DATABASE_URL=""  # PostgreSQL connection string from Supabase: postgresql://post
 
 # Flask Configuration
 FLASK_DEBUG="True"  # Set to "False" for production
+
+# Tracing Configuration
+TRACER_TYPE="console"  # Options: "console" (default) or "langfuse"
+TRACE_LOG_PII="false"  # Set to "true" to log raw phone numbers and messages (DEBUG only, not recommended for production)
+
+# Langfuse Configuration (optional, only needed if TRACER_TYPE=langfuse)
+# LANGFUSE_SECRET_KEY=""
+# LANGFUSE_PUBLIC_KEY=""
+# LANGFUSE_HOST="https://cloud.langfuse.com"  # Optional, defaults to cloud
