Add mock mode for local testing without Meta API access
- Implement mock mode that bypasses signature verification and mocks WhatsApp API calls
- Add mock_send_message() that logs messages instead of sending
- Create fixtures directory with sample webhook payloads for testing
- Add replay_fixture.py script to test webhook → agent → tools flow locally
- Update README with local testing instructions and mock mode usage
- Enable full flow testing: webhook routing, deduplication, agent execution, tool calls

Mock mode allows testing the complete system without Meta credentials:
- Skips signature verification
- Mocks WhatsApp API calls (logs with [MOCK MODE] prefix)
- Full agent flow works (LLM, tools, tracing)
- No actual messages sent to users

--- a/example.env
+++ b/example.env
@@ -29,3 +29,6 @@ TRACE_LOG_PII="false"  # Set to "true" to log raw phone numbers and messages (DE
 # LANGFUSE_SECRET_KEY=""
 # LANGFUSE_PUBLIC_KEY=""
 # LANGFUSE_HOST="https://cloud.langfuse.com"  # Optional, defaults to cloud
+
+# Mock Mode (for local testing without Meta API access)
+MOCK_MODE="false"  # Set to "true" to enable mock mode for local testing
